--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -1,10 +1,10 @@
 $cyan: hsl(180, 66%, 49%);
-$darkViolet: hsl(257, 27%, 26%);
+$dark-violet: hsl(257, 27%, 26%);
 $red: hsl(0, 87%, 67%);
 $grey: hsl(0, 0%, 75%);
-$greyishViolet: hsl(257, 7%, 63%);
-$veryDarkBlue: hsl(255, 11%, 22%);
-$veryDarkViolet: hsl(260, 8%, 14%);
+$greyish-violet: hsl(257, 7%, 63%);
+$very-sark-blue: hsl(255, 11%, 22%);
+$very-dark-violet: hsl(260, 8%, 14%);
 $black: #111;
 $white: #fff;
 
@@ -56,3 +56,7 @@ nav {
   text-decoration: none;
 }
 
+.footer {
+  background-color: $dark-violet;
+  color: $white;
+}
