--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -8,13 +8,26 @@ $very-dark-violet: hsl(260, 8%, 14%);
 $black: #111;
 $white: #fff;
 
-* {
+html, body, #root, .App {
   font-family: 'Poppins', sans-serif;
   font-size: 18px;
+  height: 100%;
+}
+
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+h1, h2, h3, h4 {
+  font-weight: 700;
+  padding: 1rem 0;
 }
 
 .container {
-  padding: 0 1rem;
+  padding: 2rem 5rem;
 }
 
 nav {
@@ -57,6 +70,37 @@ nav {
 }
 
 .footer {
-  background-color: $dark-violet;
+  background-color: $very-dark-violet;
+  bottom: 0;
   color: $white;
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  width: 100%;
+}
+
+.footer-logo{
+  flex-basis: 33%;
+}
+
+.footer-links {
+  display: flex;
+}
+
+.footer-link-list-wrapper {
+  margin: 0 1rem;
+}
+
+.footer-link-list {
+  li a {
+    color: $grey;
+    line-height: 2em;
+    text-decoration: none;
+  }
+}
+
+.footer-social {
+  img {
+    margin: 0.5rem;
+  }
 }
