--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -1,3 +1,4 @@
+$light-cyan: hsl(180, 66%, 70%);
 $cyan: hsl(180, 66%, 49%);
 $dark-violet: hsl(257, 27%, 26%);
 $red: hsl(0, 87%, 67%);
@@ -23,7 +24,34 @@ html {
 
 h1, h2, h3, h4 {
   font-weight: 700;
-  padding: 1rem 0;
+  padding: 1.2rem 0;
+}
+
+h2 {
+  font-size: 1.8em;
+}
+
+button {
+  background-color: $cyan;
+  border: none;
+  color: $white;
+  font-family: 'Poppins', sans-serif;
+  font-size: 0.8em;
+  font-weight: 700;
+  line-height: 2rem;
+  padding: 0 1.5rem;
+
+  &:hover, &:active {
+    background-color: $light-cyan;
+  }
+
+  &:focus {
+    outline: none;
+  }
+}
+
+.btn-rounded {
+  border-radius: 50px;
 }
 
 .container {
@@ -69,22 +97,38 @@ nav {
   text-decoration: none;
 }
 
-.footer {
-  background-color: $very-dark-violet;
-  bottom: 0;
+.links {
+  align-items: center;
+  background-color: $dark-violet;
+  background-image: url('/images/bg-boost-desktop.svg');
+  background-size: cover;
   color: $white;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-bottom: 2.5rem;
+}
+
+.footer {
+  background-color: $very-dark-violet;
+  color: $white;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
-  position: absolute;
+  padding: 4.5rem 5rem;
   width: 100%;
 }
 
 .footer-logo{
   flex-basis: 33%;
+  svg path {
+    fill: $white;
+  }
 }
 
 .footer-links {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .footer-link-list-wrapper {
@@ -96,11 +140,43 @@ nav {
     color: $grey;
     line-height: 2em;
     text-decoration: none;
+
+    &:hover {
+      color: $cyan;
+    }
   }
 }
 
 .footer-social {
-  img {
+  a {
     margin: 0.5rem;
+  }
+}
+
+.social-icon {
+  path {
+    &:hover {
+      fill: $cyan;
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    padding: 2rem 2rem;
+  }
+  
+  .footer {
+    justify-content: center;
+  }
+
+  .footer-links {
+    justify-content: center;
+    margin-bottom: 2rem;
+    margin-top: 1rem;
+  }
+
+  .footer-link-list-wrapper {
+    text-align: center;
   }
 }
