--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -191,12 +191,17 @@ button {
 .picture-wrapper {
   margin-right: -5rem;
 
-    & img {
-      width: 100%;
-    }
+  & img {
+    width: 100%;
   }
+}
+
+.redborder {
+  border: 2px solid $red;
+}
 
 .search {
+  align-items: flex-start;
   background-color: $dark-violet;
   background-image: url('/images/bg-boost-desktop.svg');
   background-size: cover;
@@ -204,18 +209,33 @@ button {
   display: flex;
   justify-content: center;
   margin-top: -7rem;
-  padding: 2rem;
+  padding: 2rem 2rem 0.3rem;
 
-  input {
-    border-radius: 5px;
+  .search-input {
+    display: flex;
     flex-basis: 75%;
+    flex-direction: column;
     margin-right: 1rem;
-    padding-left: 1rem;
+
+    input {
+      border-radius: 5px;
+      line-height: 1.7rem;
+      padding-left: 1rem;
+      width: 100%;
+    }
   }
 
   button {
     border-radius: 5px;
   }
+}
+
+.search-error {
+  color: $red;
+  font-size: 0.7rem;
+  height: 1.7rem;
+  line-height: 1.7rem;
+  width: 200px;
 }
 
 .search-container {
@@ -394,11 +414,25 @@ button {
 
   .search {
     flex-direction: column;
+    padding-bottom: 2rem;
 
-    input {
-      line-height: 2rem;
-      margin-bottom: 1rem;
-      margin-right: 0;
+    .search-input {
+      flex-basis: 100%;
+      width: 100%;
+
+      input {
+        line-height: 2rem;
+        margin-bottom: 1rem;
+        margin-right: 0;
+      }
+
+      .search-error {
+        height: auto;
+        width: 100%;
+      }
+    }
+    button {
+      width: 100%;
     }
   }
 
