--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -10,6 +10,8 @@ $very-dark-violet: hsl(260, 8%, 14%);
 $black: #111;
 $white: #fff;
 
+$border-radius-small: 5px;
+
 html, body {
   font-family: 'Poppins', sans-serif;
   font-size: 18px;
@@ -205,6 +207,7 @@ button {
   background-color: $dark-violet;
   background-image: url('/images/bg-boost-desktop.svg');
   background-size: cover;
+  border-radius: $border-radius-small;
   color: $white;
   display: flex;
   justify-content: center;
@@ -218,7 +221,7 @@ button {
     margin-right: 1rem;
 
     input {
-      border-radius: 5px;
+      border-radius: $border-radius-small;
       line-height: 1.7rem;
       padding-left: 1rem;
       width: 100%;
@@ -226,7 +229,7 @@ button {
   }
 
   button {
-    border-radius: 5px;
+    border-radius: $border-radius-small;
   }
 }
 
@@ -241,6 +244,34 @@ button {
 .search-container {
   margin: 0 auto;
   padding: 2rem 0;
+}
+
+.generated-links {
+
+  li {
+    align-items: center;
+    background-color: $white;
+    border-radius: $border-radius-small;
+    display: flex;
+    justify-content: space-between;
+    margin: 1rem 0;
+    padding: 0.8rem 1.5rem;
+    width: 100%
+  }
+
+  button {
+    border-radius: 5px;
+    margin-left: 1rem;
+  }
+}
+
+.longLink {
+  color: $black;
+  flex-grow: 1;
+}
+
+.shortLink {
+  color: $cyan;
 }
 
 .statistics {
