fix positioning of blue divider

--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -281,6 +281,8 @@ button {
 .statistics {
   background-color: $grey-background;
   margin-top: 7rem;
+}
+.statistics-wrapper {
   position: relative;
 }
 
