--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -33,11 +33,11 @@ h1, h2, h3, h4 {
 
 h1 {
   font-size: 4em;
-  line-height: 4.6rem;
+  line-height: 4.8rem;
 }
 
 h2 {
-  font-size: 1.8em;
+  font-size: 1.9em;
 }
 
 h3 {
@@ -51,7 +51,7 @@ button {
   font-family: 'Poppins', sans-serif;
   font-size: 0.8em;
   font-weight: 700;
-  line-height: 2rem;
+  line-height: 2.5rem;
   padding: 0 1.5rem;
   white-space: nowrap;
 
@@ -151,6 +151,7 @@ button {
 
   & a {
     color: $grey;
+    font-size: 16px;
     text-decoration: none;
   }
 
@@ -177,11 +178,14 @@ button {
 
 .blurb {
   display: flex;
-  padding-bottom: 6rem;
 }
 
 .blurb-wrapper {
   width: 50%;
+
+  h1 {
+    margin-top: 2rem;
+  }
 
   p {
     color: $grey;
@@ -192,7 +196,7 @@ button {
 }
 
 .picture-wrapper {
-  margin-right: -5rem;
+  margin-right: -10rem;
 
   & img {
     width: 100%;
@@ -213,7 +217,7 @@ button {
   display: flex;
   justify-content: center;
   margin-top: -7rem;
-  padding: 2rem 2rem 0.3rem;
+  padding: 2.4rem 2rem 0.7rem;
 
   .search-input {
     display: flex;
@@ -223,7 +227,7 @@ button {
 
     input {
       border-radius: $border-radius-small;
-      line-height: 1.7rem;
+      line-height: 2.2rem;
       padding-left: 1rem;
       width: 100%;
     }
@@ -303,6 +307,7 @@ button {
 
   p {
     color: $grey;
+    font-weight: 700;
     line-height: 1.8rem;
   }
 }
@@ -317,12 +322,19 @@ button {
   background-color: $white;
   flex: 1 30%;
   margin: 1rem;
-  padding: 1rem;
+  padding: 1.5rem;
   z-index: 2;
+
+  h3 {
+    padding-top: 2rem;
+  }
 
   p {
     color: $grey;
+    font-size: 16px;
+    font-weight: 700;
     line-height: 1.5rem;
+    padding-bottom: 1rem;
   }
 
   &:nth-child(2) {
