--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -16,6 +16,7 @@ html, body {
   font-family: 'Poppins', sans-serif;
   font-size: 18px;
   height: 100%;
+  overflow-x: hidden;
   width: 100%;
 }
 
